# ColorOCR

./: LICENSE
ColorOCR/: main.py  pyproject.toml
